--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@botpress/chat": "^0.4.0",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "lucide-vue-next": "^0.445.0",
+    "url": "^0.11.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
